--- a/www/home.html
+++ b/www/home.html
@@ -4,6 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home</title>
 </head>
+<style>
+    #copyIconID {
+        fill: white;
+    }
+</style>
 <body>
     <div class="container-fluid">
         <div class="jumbotron">
@@ -18,8 +23,31 @@
                     <h3 class="panel-title">Scanned Data</h3>
                 </div>
                 <div class="panel-body">
-                    Text {{scannedText}}<br>
-                    Format {{scannedFormat}}<br>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Scanned Value" aria-label="Username" ng-model="scannedText" aria-describedby="basic-addon1">
+                        <div class="input-group-prepend">
+                            <button class="btn btn-default btn-copy js-tooltip js-copy" type="button" data-toggle="tooltip" data-placement="bottom" data-copy={{scannedText}} title="Copy to clipboard">
+                                <!-- icon from google's material design library -->
+                                <svg id="copyIconID" class="icon" style="color:white;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M17,9H7V7H17M17,13H7V11H17M14,17H7V15H14M12,3A1,1 0 0,1 13,4A1,1 0 0,1 12,5A1,1 0 0,1 11,4A1,1 0 0,1 12,3M19,3H14.82C14.4,1.84 13.3,1 12,1C10.7,1 9.6,1.84 9.18,3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3Z" /></svg>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Scanned Value" aria-label="Username" ng-model="scannedFormat" aria-describedby="basic-addon1">
+                        <div class="input-group-prepend">
+                            <button class="btn btn-default btn-copy js-tooltip js-copy" type="button" data-toggle="tooltip" data-placement="bottom" data-copy={{scannedFormat}} title="Copy to clipboard">
+                                <svg id="copyIconID" class="icon" style="color:white;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M17,9H7V7H17M17,13H7V11H17M14,17H7V15H14M12,3A1,1 0 0,1 13,4A1,1 0 0,1 12,5A1,1 0 0,1 11,4A1,1 0 0,1 12,3M19,3H14.82C14.4,1.84 13.3,1 12,1C10.7,1 9.6,1.84 9.18,3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3Z" /></svg>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Scanned Value" aria-label="Username" ng-model="scannedData" aria-describedby="basic-addon1">
+                        <div class="input-group-prepend">
+                            <button class="btn btn-default btn-copy js-tooltip js-copy" type="button" data-toggle="tooltip" data-placement="bottom" data-copy={{scannedData}} title="Copy to clipboard">
+                                <svg id="copyIconID" class="icon" style="color:white;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M17,9H7V7H17M17,13H7V11H17M14,17H7V15H14M12,3A1,1 0 0,1 13,4A1,1 0 0,1 12,5A1,1 0 0,1 11,4A1,1 0 0,1 12,3M19,3H14.82C14.4,1.84 13.3,1 12,1C10.7,1 9.6,1.84 9.18,3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3Z" /></svg>
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <p><!--<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>--></p>
